node-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      volumes:
      - name: node-pv-storage
        persistentVolumeClaim:
          claimName: node-pv-claim
      containers:
      - name: nodeapp
        image: nodeapp
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/node_app"
          name: node-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
      nodePort: 30080
